--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,10 @@
 <html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="frontend\src\images\endereco.icofrontend\src\images\endereco.ico" />
+    <link rel="icon" type="image/x-icon" href="/src/images/endereco.ico" />
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simplify</title>
-    
+    <title>Simplify Code</title>
   </head>
   <body>
     <div id="root"></div>
